<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Application Strings -->
	<string name="hello">Hello World, HelloWorld!</string>
	<string name="app_name">Risotto</string>

	<!-- Dialog Activity Strings -->
	<string name="text_patientName">Patient Name</string>
	<string name="text_reminderTime">3:00pm</string>
	<string name="text_reminderMessage">Time to take 2 Tylenol.</string>
	<string name="button_snooze">Snooze</string>
	<string name="button_taken">Taken</string>
	
	<!-- Patient View Strings -->
	<string name="patient_view_menu_add">Add Patient...</string>
	
	<!-- Patient Add Strings -->
	<string name="patient_add_button_string">Add Patient!</string>
	<string name="patient_add_button_string_wizard">Next...</string>
	<string name="patient_add_first_name">First Name</string>
	<string name="patient_add_last_name">Last Name</string>
	<string name="patient_add_instructions">Enter new patient info:</string>
	
	<!-- Drug Edit Strings -->
	<string name="drug_resolve_title">Drug Information:</string>
	
	<!-- Drug View Strings -->
	<string name="drug_view_menu_add">Add Drug...</string>
	
	<!-- Drug Add Strings -->
	<string name="drug_add_menu_edit">Edit Drug...</string>
	<string name="drug_add_menu_remove">Remove Drug</string>
	<string name="drug_add_window_title">New drug info:</string>
	<string name="drug_add_strength">Drug Strength...</string>
	<string name="drug_add_name">Drug Name...</string>
	<string name="drug_type_default">Drug Type</string>
	<string name="button_drug_edit_ok">Add!</string>
	<string name="drug_types">Drug Types:</string>
	<string-array name="drug_types_array">
		<item>Capsules</item>
		<item>Tablets</item>
		<item>Powders</item>
		<item>Drops</item>
		<item>Liquids</item>
		<item>Spray</item>
		<item>Skin</item>
		<item>Suppositories</item>
		<item>Other</item>
	</string-array>
	
	<!-- Prescription Add Strings -->
	<string name="prescription_add_title">New Prescription info:</string>
	<string name="prescription_add_patient_selector_title">Select Patient:</string>
	<string name="prescription_add_drug_selector_title">Select Drug:</string>
	<string name="prescription_add_patient_first_name_hint">First Name...</string>
	<string name="prescription_add_patient_last_name_hint">Last Name...</string>
	<string name="button_ok_prescription_add">Add!</string>
	
	<!-- Prescription View Strings -->
	<string name="prescription_details_view_title">Prescription Details:</string>

	<!-- Drug Details Strings -->
	<string name="drug_details_title">Drug Details:</string>
	
	<!-- Title Bar Strings -->
	<string name="title_bar_text">Pillbox</string>
	
	<!-- Home Screen Strings -->
	<string name="home_screen_patients">Patients</string>
	<string name="home_screen_drugs">Drugs</string>
	<string name="home_screen_schedule">Schedule</string>
	<string name="home_screen_history">Prescriptions (will be history in the future)</string>
	<string name="home_menu_about">About</string>
	<string name="home_menu_settings">Settings</string>
	
	<!-- Wizard Strings -->
	
		<!-- WhoWillBeTaking Strings -->
		<string name="wizard_who_will_be_taking_question">Who is the prescription for?</string>
		<string name="wizard_who_will_be_taking_me">It\'s for me.</string>
		<string name="wizard_who_will_be_taking_other">It\'s for someone else.</string>
		
		<!-- OverCounterOrPrescription Strings -->
		<string name="wizard_over_counter_or_prescription_question">What type of medication is it?</string>
		<string name="wizard_over_counter_or_prescription_otc">Over the counter.</string>
		<string name="wizard_over_counter_or_prescription_prep">Prescription</string>
		
		<!-- EnterDrugDetails Strings -->
		<string name="wizard_enter_drug_details_instructions">Please enter the drug information...</string>
		<string-array name="drug_form_label_array">
			<item>pills</item>
			<item>mL</item>
			<item>mg</item>
			<item>oz</item>
			<item>tablespoons</item>
			<item>other</item>
		</string-array>
		
		<!-- PatientSelect Strings -->
		<string name="wizard_patient_select_instructions">Please select who the reminder is for...</string>
		
		<!-- DrugSelect Strings -->
		<string name="wizard_drug_select_instructions">Recently Taken:</string>
		
		<!-- WhenTakeIt Strings -->
		<string name="wizard_when_take_it_text">When will you take this medicine?</string>
		<string name="wizard_when_take_it_spec_time">At specific times...</string>
		<string name="wizard_when_take_it_spec_time_support">For example: once a day, twice a day, three times a day, with a meal, etc.</string>
		<string name="wizard_when_take_it_spec_interval">At specific intervals...</string>
		<string name="wizard_when_take_it_spec_interval_support">For example: every 4 hours, every 12 hours, every other day, etc.</string>
	
		<!-- TakeItEveryDay Strings -->
		<string name="wizard_take_it_every_day_question">Will you take it every day?</string>
		<string name="wizard_take_it_every_day_yes">Yes, I will take it every day of the week.</string>
		<string name="wizard_take_it_every_day_no">No, I will not take it every day of the week.</string>
	
		<!-- HowOftenSchedule Strings -->
		<string name="wizard_how_often_schedule_text">Please enter the times you\'ll be taking the drug:</string>
		<string name="wizard_how_often_schedule_hint_time_pick">Select time...</string>
		
		<!-- WhatDaysTake Strings -->
		<string name="wizard_what_days_take_instructions">What days will you be taking the medicine?</string>
		
	
	
</resources>
